--- a/.antigenrc
+++ b/.antigenrc
@@ -23,7 +23,7 @@ antigen bundle zsh-users/zsh-completions
 #antigen bundle
 #antigen bundle
 #antigen bundle
-#antigen bundle
+antigen bundle bhayward93/Linus-rants-ZSH.git
 antigen bundle r3b311ion/caniuse-plugin-zsh-git
 antigen bundle zpm-zsh/autoenv
 antigen bundle jhwohlgemuth/oh-my-zsh-pentest-plugin
