--- a/.config/git/config
+++ b/.config/git/config
@@ -20,22 +20,23 @@
 #	gpgsign = true
 [core]
 	editor = nano
-	pager = delta --dark --theme='base16' --tabs 2 | less --tabs=2 -RFX
+	pager = diff-so-fancy | less --tabs=4 -RFX
+#	pager = delta --dark --theme='base16' --tabs 2 | less --tabs=2 -RFX
 	commitGraph = true
 [color]
 	ui = true
 [color "diff-highlight"]
-	oldNormal = red bold
-	oldHighlight = red bold 52
-	newNormal = green bold
-	newHighlight = green bold 22
+	  oldNormal = red
+	  oldHighlight = red "#500000"
+	  newNormal = green
+	  newHighlight = green "#003000"
 [color "diff"]
-	meta = yellow
-	frag = magenta bold
-	commit = yellow bold
-	old = red bold
-	new = green bold
-	whitespace = red reverse
+	  meta = 11
+	  frag = magenta bold
+	  commit = yellow bold
+	  old = red
+	  new = green
+	  whitespace = "#ffff00" reverse
 [ghq]
 	root = "~/Executables/ghq"
 [alias]
@@ -54,4 +55,51 @@
 	from=jimbob343@gmail.com
 	compose-encoding=UTF-8
 
+[alias]
+    st = status
+    ci = commit --verbose
+    co = checkout
+    di = diff --find-copies-harder
+    dc = diff --find-copies-harder --cached
+    amend = commit --amend
+    aa = add --all
+    ff = merge --ff-only
+    noff = merge --no-ff
+    fa = fetch --all
+    pom = push origin master
+    ds = diff --stat=160,120
+    dh1 = diff HEAD~1
 
+    # Divergence (commits we added and commits remote added)
+    div = divergence
+
+    # Goodness (summary of diff lines added/removed/total)
+    gn = goodness
+    gnc = goodness --cached
+
+    # Fancy logging.
+    #   h = head
+    #   hp = head with patch
+    #   r = recent commits, only current branch
+    #   ra = recent commits, all reachable refs
+    #   l = all commits, only current branch
+    #   la = all commits, all reachable refs
+    #   b = all branches
+    #   bs = all branches, sorted by last commit date
+    head = !git r -1
+    h = !git head
+    hp = "!. ~/.githelpers && show_git_head"
+    r = !GIT_NO_PAGER=1 git l -30
+    ra = !git r --all
+    l = "!. ~/.githelpers && pretty_git_log"
+    la = !git l --all
+    b = "!. ~/.githelpers && pretty_git_branch"
+    bs = "!. ~/.githelpers && pretty_git_branch_sorted"
+    ski = !git stash --keep-index
+    cp = cherry-pick
+    pf = push --force-with-lease
+[merge]
+    tool = vimdiff
+[diff-so-fancy]
+    stripLeadingSymbols = false
+    markEmptyLines = false
