--- a/pacman.conf
+++ b/pacman.conf
@@ -321,7 +321,7 @@ Server = https://repomirror.parabola.nu/nonprism/os/x86_64/
 # but the paid hosting service occasionally messes around with cross-domain
 # ".db" extension filters which block access to the files so the following
 # workaround is provided:
-
+[xyne-x86_64]
 Server = https://xyne.archlinux.ca/bin/repo.php?file=
 # -----------------------------------------------------------------------------
 
