--- a/pacman.conf
+++ b/pacman.conf
@@ -1,6 +1,40 @@
 #
 # /etc/pacman.conf
 #
+# See the pacman.conf(5) manpage for option and repository directives
+
+#
+# GENERAL OPTIONS
+#
+[options]
+# The following paths are commented out with their default values listed.
+# If you wish to use different paths, uncomment and update the paths.
+#RootDir     = /
+#DBPath      = /var/lib/pacman/
+CacheDir = /var/cache/pacman/pkg/
+#LogFile     = /var/log/pacman.log
+#GPGDir      = /etc/pacman.d/gnupg/
+#HookDir     = /etc/pacman.d/hooks/
+#HoldPkg      = pacman glibc manjaro-system
+# If upgrades are available for these packages they will be asked for first
+SyncFirst    = manjaro-system archlinux-keyring manjaro-keyring
+#XferCommand = /usr/bin/curl -C - -f %u > %o
+#XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
+#CleanMethod = KeepInstalled
+#UseDelta    = 0.7
+Architecture = auto
+
+# Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
+#IgnorePkg   =
+#IgnoreGroup =
+
+#NoUpgrade   =
+#NoExtract   =
+
+# Misc options
+##
+# /etc/pacman.conf
+#
 
 #
 # GENERAL OPTIONS
@@ -16,30 +50,69 @@ VerbosePkgLists
 CheckSpace
 ILoveCandy 
 
+# By default, pacman accepts packages signed by keys that its local keyring
+# trusts (see pacman-key and its man page), as well as unsigned packages.
+SigLevel    = Never
+LocalFileSigLevel = Optional
+#RemoteFileSigLevel = Required
+
+# NOTE: You must run `pacman-key --init` before first using pacman; the local
+# keyring can then be populated with the keys of all official Manjaro Linux
+# packagers with `pacman-key --populate archlinux manjaro`.
+
 #
 # REPOSITORIES
+#   - can be defined here or included from another file
+#   - pacman will search repositories in the order defined here
+#   - local/custom mirrors can be added here or in separate files
+#   - repositories listed first will take precedence when packages
+#     have identical names, regardless of version number
+#   - URLs will have $repo replaced by the name of the current repo
+#   - URLs will have $arch replaced by the name of the architecture
+#
+# Repository entries are of the format:
+#       [repo-name]
+#       Server = ServerName
+#       Include = IncludePath
+#
+# The header [repo-name] is crucial - it must be present and
+# uncommented to enable the repo.
 #
 
-############ Official Repositories ########
+# The testing repositories are disabled by default. To enable, uncomment the
+# repo name header and Include lines. You can add preferred servers immediately
+# after the header, and they will be used before the default mirrors.
 
 [core]
+SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 
 [extra]
+SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 
 [community]
+SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
+
+# If you want to run 32 bit applications on your x86_64 system,
+# enable the multilib repositories as required here.
 
 [multilib]
+SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 
+# An example of a custom package repository.  See the pacman manpage for
+# tips on creating your own repositories.
+#[custom]
+#SigLevel = Optional TrustAll
+#Server = file:///home/custompkgs
 ######################################
 ######### Community Repositories #####
 ######################################
 
-[liri-unstable]
-Server = https://repo.liri.io/archlinux/unstable/$arch/
+#[liri-unstable]
+#Server = https://repo.liri.io/archlinux/unstable/$arch/
 
 #[obarun]
 #Server = https://repo.obarun.org/$arch
@@ -50,8 +123,8 @@ Server = https://vicr123.github.io/repo/arch/$arch/
 ##############################################
 ##############################################
 
-[arcbasic_repo]
-Server = https://arcbasic.github.io/repo/$arch
+#[arcbasic_repo]
+#Server = https://arcbasic.github.io/repo/$arch
 
 [arcolinux_repo]
 Server = https://arcolinux.github.io/arcolinux_repo/$arch
@@ -62,18 +135,18 @@ Server = https://arcolinux.github.io/arcolinux_repo_iso/$arch
 [archlinux-ddosolitary]
 Server = https://archlinux-repo.sourceforge.io/packages
 
-[aur-archlinux]
-Server = https://repo.itmettke.de/aur/$repo/$arch
+#[aur-archlinux]
+#Server = https://repo.itmettke.de/aur/$repo/$arch
 
-[archlabs_repo]
-Server = https://archlabs.github.io/archlabs_repo/$arch
+#[archlabs_repo]
+#Server = https://archlabs.github.io/archlabs_repo/$arch
 
-[archman_repo]
-Server = http://archman.org/source/archman_repo/$arch
-Server = https://raw.github.com/Archman-OS/archman_repo/master/$arch
+#[archman_repo]
+#Server = http://archman.org/source/archman_repo/$arch
+#Server = https://raw.github.com/Archman-OS/archman_repo/master/$arch
 
-[anarchy]
-Server = https://anarchy-linux.org/repo/$arch
+#[anarchy]
+#Server = https://anarchy-linux.org/repo/$arch
 
 [archlinuxfr]
 Server = http://repo.archlinux.fr/$arch
@@ -92,11 +165,11 @@ Server = https://cdn.repo.archlinuxcn.org/$arch
 Server = https://mirrors.geekpie.org/archlinuxcn/$arch
 Server = https://mirrors.ustc.edu.cn/archlinuxcn/$arch
 
-[alucryd]
-Server = http://pkgbuild.com/~alucryd/$repo/x86_64
+#[alucryd]
+#Server = http://pkgbuild.com/~alucryd/$repo/x86_64
 
-[alucryd-multilib]
-Server = http://pkgbuild.com/~alucryd/$repo/x86_64
+#[alucryd-multilib]
+#Server = http://pkgbuild.com/~alucryd/$repo/x86_64
 
 [andrwe]
 Server = http://repo.andrwe.org/x86_64
@@ -105,8 +178,8 @@ Server = http://repo.andrwe.org/x86_64
 Server = http://repo.arcanis.me/repo/$arch
 Server = ftp://repo.arcanis.me/repo/$arch
 
-[ashleyis]
-Server = http://arch.ashleytowns.id.au/repo/$arch
+#[ashleyis]
+#Server = http://arch.ashleytowns.id.au/repo/$arch
 
 [archstrike]
 Server = https://mirror.archstrike.org/$arch/$repo
@@ -124,17 +197,17 @@ Server = http://mirror.team-cymru.org/blackarch/$repo/os/$arch
 Server = http://packages.bbqlinux.org/$repo/os/$arch
 Server = http://mirror.amagital.com/$repo/os/$arch
 
-[coderkun-aur]
-Server = http://arch.coderkun.de/$repo/$arch/
+#[coderkun-aur]
+#Server = http://arch.coderkun.de/$repo/$arch/
 
-[coderkun-aur-audio]
-Server = http://arch.coderkun.de/$repo/$arch/
+#[coderkun-aur-audio]
+#Server = http://arch.coderkun.de/$repo/$arch/
 
-[condresrepo]
-Server = https://repository.codelinsoft.it/condres-core-signed/
+#[condresrepo]
+#Server = https://repository.codelinsoft.it/condres-core-signed/
 
-[city]
-Server = http://pkgbuild.com/~bgyorgy/$repo/os/$arch
+#[city]
+#Server = http://pkgbuild.com/~bgyorgy/$repo/os/$arch
 
 [eatabrick]
 Server = http://repo.eatabrick.org/$arch
@@ -145,14 +218,14 @@ Server = https://pkgbuild.com/~eschwartz/repo/$arch
 [heftig]
 Server = https://pkgbuild.com/~heftig/repo/$arch
 
-[home_fusion809_Arch_Extra]
-Server = https://download.opensuse.org/repositories/home:/fusion809/Arch_Extra/$arch
+#[home_fusion809_Arch_Extra]
+#Server = https://download.opensuse.org/repositories/home:/fusion809/Arch_Extra/$arch
 
-[home_Minerva_W_Science_Arch_Extra]
-Server = http://download.opensuse.org/repositories/home:/Minerva_W:/Science/Arch_Extra/$arch
+#[home_Minerva_W_Science_Arch_Extra]
+#Server = http://download.opensuse.org/repositories/home:/Minerva_W:/Science/Arch_Extra/$arch
 
-[home_Head_on_a_Stick_Arch_Arch_Extra]
-Server = https://download.opensuse.org/repositories/home:/Head_on_a_Stick:/Arch/Arch_Extra/$arch
+#[home_Head_on_a_Stick_Arch_Arch_Extra]
+#Server = https://download.opensuse.org/repositories/home:/Head_on_a_Stick:/Arch/Arch_Extra/$arch
 
 [home-thaodan]
 Server = https://thaodan.de/home/bidar/home-thaodan/$arch
@@ -172,15 +245,15 @@ Server = http://ivasilev.net/pacman/any
 [jlk]
 Server = http://jlk.fjfi.cvut.cz/arch/repo
 
-[joekamprad]
-Server = http://www.antergos.kamprad.net/antergos-packages  
+#[joekamprad]
+#Server = http://www.antergos.kamprad.net/antergos-packages  
 
 [jkanetwork]
 Server = http://repo.jkanetwork.com/repo/$repo/
 
-[kpiche]
-Server = http://kpiche.archlinux.ca/repo
-Server = http://kpiche.archlinux.ca/repo/os/x86_64 
+#[kpiche]
+#Server = http://kpiche.archlinux.ca/repo
+#Server = http://kpiche.archlinux.ca/repo/os/x86_64 
 
 [markzz]
 Server = https://repo.markzz.com/arch/$repo/$arch
@@ -188,8 +261,8 @@ Server = https://repo.markzz.com/arch/$repo/$arch
 [miffe]
 Server = http://arch.miffe.org/$arch/
 
-[magpieos]
-Server = https://rizwan-hasan.github.io/MagpieOS-Repository/
+#[magpieos]
+#Server = https://rizwan-hasan.github.io/MagpieOS-Repository/
 
 [mikelpint]
 Server = https://mikelpint.github.io/repository/archlinux/repo
@@ -200,8 +273,8 @@ Server = https://namibrepo.meerkat.tk/$arch
 [nulogic]
 Server = http://www.nulogicsystems.com/public_files/nulogic/x86_64/
 
-[ninjaos]
-Server=http://ninjaos.org/repo/$arch
+#[ninjaos]
+#Server=http://ninjaos.org/repo/$arch
 
 [ownstuff]
 Server = http://martchus.no-ip.biz/repo/arch/$repo/os/$arch
@@ -209,25 +282,25 @@ Server = http://martchus.no-ip.biz/repo/arch/$repo/os/$arch
 [pkgbuilder]
 Server = https://pkgbuilder-repo.chriswarrick.com/
 
-[portergos]
-Server = https://github.com/Portergos/portergos_repository/releases/download/portergos/
-Server = https://sourceforge.net/projects/portergosrepository/files/portergos/
+#[portergos]
+#Server = https://github.com/Portergos/portergos_repository/releases/download/portergos/
+#Server = https://sourceforge.net/projects/portergosrepository/files/portergos/
 
-[Reborn-OS]
-Server = https://sourceforge.net/projects/antergos-deepin/files/
+#[Reborn-OS]
+#Server = https://sourceforge.net/projects/antergos-deepin/files/
 
 [repo-ck]							
 Server = http://repo-ck.com/$arch
 Server = https://mirrors.nju.edu.cn/repo-ck/$arch
 
 [revenge_repo]
-Server = https://downloads.sourceforge.net/project/revenge-repo/revenge_repo/$arch
-Server = ftp://ftp.heanet.ie/mirrors/sourceforge/r/re/revenge-repo/revenge_repo/$arch
+#Server = https://downloads.sourceforge.net/project/revenge-repo/revenge_repo/$arch
+#Server = ftp://ftp.heanet.ie/mirrors/sourceforge/r/re/revenge-repo/revenge_repo/$arch
 Server = https://raw.github.com/obrevenge/revenge_repo/master/$arch
 
-[swagarchrepo]
-Server=https://memoryleakx.keybase.pub/swagarch/repo/
-Server=http://swagarch.bplaced.net/repo/
+#[swagarchrepo]
+#Server=https://memoryleakx.keybase.pub/swagarch/repo/
+#Server=http://swagarch.bplaced.net/repo/
 
 [seblu]
 Server = http://al.seblu.net/$repo/$arch
@@ -250,8 +323,8 @@ Server = https://xyne.archlinux.ca/repos/xyne
 
 #################### Manjaro Repos -----
 
-[kibojoe]
-Server = http://repo.kibojoe.org/stable/$arch/
+#[kibojoe]
+#Server = http://repo.kibojoe.org/stable/$arch/
 
 [netrunner]
 Server = http://arch.netrunner.com/netrunner/$arch
@@ -321,7 +394,7 @@ Server = https://repomirror.parabola.nu/nonprism/os/x86_64/
 # but the paid hosting service occasionally messes around with cross-domain
 # ".db" extension filters which block access to the files so the following
 # workaround is provided:
-[xyne-x86_64]
+[xyne-x86_642]
 Server = https://xyne.archlinux.ca/bin/repo.php?file=
 # -----------------------------------------------------------------------------
 
@@ -332,6 +405,6 @@ Server = https://xyne.archlinux.ca/bin/repo.php?file=
 # 2001 Duncan Dr NW Unit 894
 # Kennesaw, GA 30156
 # 1-678-718-8800
-
+[xyne2]
 Server = https://xyne.mirrorrepo.com/repos/xyne
 # -----------------------------------------------------------------------------
