--- a/pacman.conf
+++ b/pacman.conf
@@ -17,7 +17,7 @@ CacheDir = /var/cache/pacman/pkg/
 #HookDir     = /etc/pacman.d/hooks/
 #HoldPkg      = pacman glibc manjaro-system
 # If upgrades are available for these packages they will be asked for first
-SyncFirst    = manjaro-system archlinux-keyring manjaro-keyring
+SyncFirst    = archlinux-keyring 
 #XferCommand = /usr/bin/curl -C - -f %u > %o
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
 #CleanMethod = KeepInstalled
@@ -48,7 +48,7 @@ Color
 TotalDownload
 VerbosePkgLists
 CheckSpace
-ILoveCandy 
+ILoveCandy
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -246,14 +246,14 @@ Server = http://ivasilev.net/pacman/any
 Server = http://jlk.fjfi.cvut.cz/arch/repo
 
 #[joekamprad]
-#Server = http://www.antergos.kamprad.net/antergos-packages  
+#Server = http://www.antergos.kamprad.net/antergos-packages
 
 [jkanetwork]
 Server = http://repo.jkanetwork.com/repo/$repo/
 
 #[kpiche]
 #Server = http://kpiche.archlinux.ca/repo
-#Server = http://kpiche.archlinux.ca/repo/os/x86_64 
+#Server = http://kpiche.archlinux.ca/repo/os/x86_64
 
 [markzz]
 Server = https://repo.markzz.com/arch/$repo/$arch
@@ -289,7 +289,7 @@ Server = https://pkgbuilder-repo.chriswarrick.com/
 #[Reborn-OS]
 #Server = https://sourceforge.net/projects/antergos-deepin/files/
 
-[repo-ck]							
+[repo-ck]
 Server = http://repo-ck.com/$arch
 Server = https://mirrors.nju.edu.cn/repo-ck/$arch
 
